Some more renaming

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Clap Attack",
-  "description": "A chrome extension boilerplate built with React 17, Webpack 5, and Webpack Dev Server 4",
+  "description": "A chrome extension to clap to the max on medium articles",
   "options_page": "options.html",
   "background": { "service_worker": "background.bundle.js" },
   "action": {
